# CPP_NeuralNetwork

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
Generator/: CMakeLists.txt
Generator/Includes/: MainClass.h
Generator/Sources/: MainClass.cpp  main.cpp
Includes/: AMain.h  IMain.h  MainClass.h
Lib/ArgParser/: README.md
Lib/ArgParser/Includes/: ArgParser.h
Lib/ArgParser/Sources/: ArgParser.cpp
Lib/ClassBase/: CMakeLists.txt  README.md
Lib/ClassBase/Includes/: AClass.h
Lib/ClassBase/Sources/: AClass.cpp
Lib/DeepNetwork/: CMakeLists.txt  README.md
Lib/DeepNetwork/Includes/: ANetworkData.hpp  Network.hpp  NetworkException.hpp  NetworkTrainer.hpp  Neuron.hpp
Lib/DeepNetwork/Sources/: ANetworkData.cpp  Network.cpp  NetworkTrainer.cpp  Neuron.cpp
Lib/Logger/Includes/: Channel.h  Config.h  DateTime.h  Exception.h  Formatter.h  Log.h  Logger.h  Manager.h  Output.h  OutputConsole.h  OutputDebug.h  OutputFile.h  shared_ptr.hpp
Lib/Logger/Sources/: Config.cpp  DateTime.cpp  Log.cpp  Logger.cpp  Manager.cpp  OutputConsole.cpp  OutputFile.cpp
NeuralNetwork/: CMakeLists.txt
NeuralNetwork/Includes/: AClass.h  MainClass.h  fs
NeuralNetwork/Includes/NeuralNetwork/: ANetwork.hpp  ANetworkData.hpp  INetwork.hpp  Layer.hpp  Network.hpp  NetworkException.hpp  Neuron.hpp
NeuralNetwork/Lib/MatPlotLib/Includes/: MatPlotLib.h
NeuralNetwork/Sources/: MainClass.cpp  main.cpp
NeuralNetwork/Sources/NeuralNetwork/: ANetwork.cpp  ANetworkData.cpp  Layer.cpp  Network.cpp  Neuron.cpp
Sources/: AMain.cpp  MainClass.cpp  main.cpp
cmake/: safeguards.cmake
includes/: ANetworkData.hpp  Network.hpp  NetworkException.hpp  Neuron.hpp
samples_input/: winequality-red.csv  xor_gate.txt
samples_save/: or_gate.txt
sources/: ANetworkData.cpp  Network.cpp  NetworkTrainer.cpp  Neuron.cpp  generator.cpp  main.cpp
